# Internship-clone

./: .env  .env.example  .gitignore  .gitmodules  C4_MODEL.md  C4_MODEL_SUMMARY.md  FUNCTION_INTEGRATION_GUIDE.md  PORTABILITY_GUIDE.md  package-lock.json  package.json  pyproject.toml  test.xlsx  test_save_endpoint.py
backend/: main.py  test.py
backend/functions/: __init__.py  factorFilter.py  scoreCalculating.py  statements.py  statisticalAnalysis.py  uploading.py
diagrams/: README.md  c4-all-levels-combined.puml  c4-hierarchical-all-levels.puml  c4-integrated-overview.puml  c4-level1-context.puml  c4-level2-container.puml  c4-level3-backend-components.puml  c4-level3-frontend-components.puml  c4-level3-statistics-components.puml  c4-level4-code-example.puml  create-enhanced-viewer.py  extract-from-markdown.py  generate-ascii-diagrams.py  generate-diagrams.sh  generate-png-diagrams.py  generate-png-reliable.py  generate-png-robust.py  verify-pngs.py
diagrams/generated-png/: index.html
frontend/: .env.example  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: AnnulerenButton.vue  CreateGroup.vue  DatabaseCombiner.vue  DraggableItem.vue  FormBlock.vue  FunctionTester.vue  (+5 more)
static/: index.html  scripts.js
static/assets/: DownloadPage-BiK7OunR.js  UploadPage-lrleJmlV.css  index--fW3nVvC.js  index-CLYWt7t3.css
staticFirstPage/: scripts.js  styles.css
staticFirstPage/assets/: UploadPage-C1P-VB9c.js
templates/: index.html
(+10 files in other folders)
