[project]
name = "cronbach-webapp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastexcel>=0.14.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
    "pymongo>=4.13.0",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
    "werkzeug>=3.1.3",
    "ArpY",
    "python-multipart>=0.0.20",
]

[tool.uv.sources]
ArpY = { path = "ArpY" }
